# mylms-rewrite

./: README.md  dev.ps1  docker-compose.yml  vercel.json
backend/: .env.example  Cargo.toml  Dockerfile  README.md  build_output.txt  fly.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/cache/: memory.rs  mod.rs
backend/src/content/: cleaner.rs  mod.rs  typst.rs
backend/src/libgen/: client.rs  mod.rs  types.rs
backend/src/moodle/: client.rs  mod.rs  types.rs
backend/src/routes/: auth.rs  books.rs  content.rs  courses.rs  export.rs  mod.rs
mylms-dashboard/: .gitignore  Dockerfile  README.md  VERCEL_DEPLOY.md  download-itcpb-html-fixed.js  jest.setup.ts  next.config.ts  package-lock.json  package.json
mylms-dashboard/src/app/: actions.ts  addTokenAction.ts  adminActions.ts  layout.tsx  page.tsx
mylms-dashboard/src/app/api/course/[id]/: route.ts
mylms-dashboard/src/app/api/courses/: route.ts
mylms-dashboard/src/app/api/investigate-api/: route.ts
mylms-dashboard/src/app/api/logout/: route.ts
mylms-dashboard/src/app/dashboard/: AddTokenButton.tsx  CommandPalette.tsx  CourseList.tsx  CourseSelection.tsx  error.tsx  page.tsx
mylms-dashboard/src/app/dashboard/course/[id]/: ActivityItem.tsx  CourseContent.tsx  error.tsx  page.tsx
mylms-dashboard/src/components/: AdminPanel.tsx  DownloadProgressBar.tsx
mylms-dashboard/src/components/Course/: CourseFilters.tsx  CourseHeader.tsx  SectionList.tsx
mylms-dashboard/src/config/: moodle.ts
mylms-dashboard/src/lib/: apiAvailabilityCache.ts  backendClient.ts  cacheService.ts  dashboardCache.ts  indexedDB.ts  investigateAPIContent.ts  moodle.ts  retryUtils.ts  telemetry.ts
mylms-dashboard/src/lib/__tests__/: cache.test.ts  moodle.test.ts
mylms-dashboard/src/lib/cache/: fileSystemAdapter.ts  inMemoryAdapter.ts  types.ts
mylms-dashboard/src/lib/content/: cleaner.ts  scraper.ts
mylms-dashboard/src/lib/moodle/: auth.ts  client.ts  scraper.ts  types.ts
mylms-dashboard/src/lib/moodle/__tests__/: CORE_COURSE_GET_CONTENTS_PARAMS.md  MOODLE_API_FUNCTIONS.md  README.md  api-exploration.test.ts  explore-api.ts  find-test-ids.ts  get-site-functions.ts  moodle-api-functions.json  test-course-contents.ts
