[package]
name = "mylms-backend"
version = "0.1.0"
edition = "2021"
description = "Rust backend for MyLMS Dashboard - Moodle API integration"
authors = ["Luke"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client for Moodle API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML parsing and cleaning
scraper = "0.22"
lol_html = "2"

# Caching
redis = { version = "0.27", features = ["tokio-comp"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.5"
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
